Implement rtl support

--- a/ddp-workspace/projects/ddp-testboston/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
                 <p class="column__title" translate>Navigation.Titles.ContactUs</p>
                 <ul class="list">
                     <li>
-                        <a class="Link Link_no-wrap footer-link" [href]="phoneHref">{{phone}}</a>
+                        <a class="Link Link_no-wrap Link-phone footer-link" [href]="phoneHref">{{phone}}</a>
                     </li>
                     <li>
                         <a class="Link Link_no-wrap footer-link" [href]="emailHref">{{email}}</a>
