--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
@@ -70,15 +70,15 @@
                 <h2 class="sub-title" translate>Help.Pickup.Title</h2>
                 <p>
                     <span translate>Help.Pickup.Text.Part1</span>
-                    <a class="Link Link_semi-bold" href="tel:1-844-487-7522">1-844-487-7522</a>.
+                    <a class="Link Link_semi-bold Link_phone" href="tel:1-844-487-7522">1-844-487-7522</a>.
                     <span translate>Help.Pickup.Text.Part2</span>
-                    <a class="Link Link_semi-bold" [href]="'tel:' + phone">{{phone}}</a>.
+                    <a class="Link Link_semi-bold Link_phone" [href]="'tel:' + phone">{{phone}}</a>.
                 </p>
 
                 <h2 class="sub-title" translate>Help.Questions.Title</h2>
                 <p>
                     <span translate>Help.Questions.Text.Part1</span>
-                    <a class="Link Link_semi-bold" [href]="'tel:' + phone">{{phone}}</a>
+                    <a class="Link Link_semi-bold Link_phone" [href]="'tel:' + phone">{{phone}}</a>
                     <span translate>Help.Questions.Text.Part2</span>
                     <a class="Link Link_semi-bold" [href]="'mailto:' + email">{{email}}</a>.
                 <p>
