--- a/ddp-workspace/projects/ddp-testboston/src/app/components/user-registration-prequal/user-registration-prequal.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/user-registration-prequal/user-registration-prequal.component.html
@@ -28,7 +28,7 @@
                         <span translate>PrequalPage.InvitationCode.Error.Part1</span>
                         <a class="Link Link_bold" [href]="emailHref">{{email}}</a>
                         <span translate>PrequalPage.InvitationCode.Error.Part2</span>
-                        <a class="Link Link_bold" [href]="phoneHref">{{phone}}</a>.
+                        <a class="Link Link_bold Link_phone" [href]="phoneHref">{{phone}}</a>.
                     </p>
                 </ng-container>
                 <p class="invitation-form__question bold" translate>PrequalPage.Zip.Question</p>
