--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
@@ -46,7 +46,7 @@
                 </ng-container>
             </mat-accordion>
             <p class="question-block__help">
-                <span translate>HomePage.FaqSection.Text</span>
+                <span class="rtl" translate>HomePage.FaqSection.Text</span>
                 <a class="Link Link_semi-bold" [href]="phoneHref">{{phone}}</a>
                 <span>|</span>
                 <a class="Link Link_semi-bold" [href]="emailHref">{{email}}</a>.
