--- a/ddp-workspace/projects/ddp-testboston/src/app/components/mailing-list/mailing-list.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/mailing-list/mailing-list.component.html
@@ -94,7 +94,7 @@
                 <span translate>Toolkit.ErrorPage.DefaultText.TextPt1</span>
                 <a [href]="emailHref" class="Link Link_bold">{{email}}</a>
                 <span translate>Toolkit.ErrorPage.DefaultText.TextPt2</span>
-                <a [href]="phoneHref" class="Link Link_bold">{{phone}}</a>.
+                <a [href]="phoneHref" class="Link Link_bold Link_phone">{{phone}}</a>.
             </p>
         </div>
     </ng-container>
