--- a/ddp-workspace/projects/ddp-testboston/src/styles.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/styles.scss
@@ -7,6 +7,7 @@
 @import './style/session-expired.scss';
 @import './style/dialogs.scss';
 @import './style/subject-panel.scss';
+@import './style/right-to-left.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Nunito');
 
@@ -127,6 +128,10 @@ li {
     color: mat-color($app-theme, 1500);
     text-decoration: none;
     white-space: nowrap;
+
+    &_phone {
+        unicode-bidi: embed;
+    }
 
     &_bold {
         font-weight: 700;
