--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -462,3 +462,15 @@ select:disabled {
         }
     }
 }
+
+// sub picklist 
+.ddp-sub-picklist {
+    margin-left: 3rem;
+
+    &__title {
+        margin: 1rem 0 0.5rem 0;
+        font-family: 'Source Serif Pro', serif;
+        font-size: 1.2rem;
+        line-height: 2rem;
+    }
+}
