--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -463,8 +463,8 @@ select:disabled {
     }
 }
 
-// sub picklist 
-.ddp-sub-picklist {
+// nested picklist
+.ddp-nested-picklist {
     margin-left: 3rem;
 
     &__title {
