Make functionality to show participants in participant list

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.scss
@@ -12,6 +12,17 @@
   @media (min-width: $desktop) {
     width: 70%;
   }
+
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+
+    padding: 2rem 0;
+  }
+
+  .ButtonFilled--green {
+    margin-left: 0;
+  }
 }
 
 .participants-table {
