--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
@@ -1,5 +1,89 @@
 <div class="participant-list">
   <h1 class="title title--grey" translate>Toolkit.Dashboard.Title</h1>
   <h2 class="subtitle subtitle--light" translate>Toolkit.Dashboard.Text</h2>
-  <h2 class="title title--green" translate>SDK.ManageParticipants.ParticipantsList</h2>
+  <h2 class="title title--green" translate>
+    SDK.ManageParticipants.ParticipantsList
+  </h2>
+
+  <div *ngIf="!isLoaded" class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <table
+    *ngIf="isLoaded"
+    mat-table
+    [dataSource]="dataSource"
+    class="participants-table"
+  >
+    <!-- Participant Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef class="table-header" translate>
+        Toolkit.Dashboard.Participant
+      </th>
+      <td mat-cell *matCellDef="let participant" class="table-row">
+        <span *ngIf="participant.isPlaceholder; else participantName" translate>
+          Toolkit.Dashboard.NoParticipants
+        </span>
+
+        <ng-template #participantName>
+          <ng-container *ngIf="participant.name; else noParticipantName">
+            {{ participant.name }}
+          </ng-container>
+
+          <ng-template #noParticipantName>
+            <span translate>SDK.ManageParticipants.ParticipantPlaceholder</span>
+          </ng-template>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- Enrollment Status Column -->
+    <ng-container matColumnDef="enrollmentStatus">
+      <th mat-header-cell *matHeaderCellDef class="table-header" translate>
+        Toolkit.Dashboard.EnrollmentStatus
+      </th>
+      <td mat-cell *matCellDef="let participant" class="table-row">
+        <ng-container *ngIf="!participant.isPlaceholder">
+          <ng-container
+            *ngIf="participant.enrollmentStatus; else noEnrollmentStatus"
+          >
+            {{ participant.enrollmentStatus.activityCode }} /
+            {{ participant.enrollmentStatus.statusCode }}
+          </ng-container>
+
+          <ng-template #noEnrollmentStatus>No Data</ng-template>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <!-- Console Actions Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef class="table-header" translate>
+        Toolkit.Dashboard.Actions
+      </th>
+      <td mat-cell *matCellDef="let participant" class="table-row">
+        <ng-container *ngIf="!participant.isPlaceholder">
+          <button
+            class="BtnFilled BtnFilled--blue"
+            (click)="onActionButtonClick(participant.action, participant.guid)"
+          >
+            <span translate>{{
+              'Toolkit.ParticipantList.ParticipantActions.' + participant.action
+            }}</span>
+          </button>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <button
+    class="button ButtonFilled ButtonFilled--green"
+    (click)="onAddParticipantClick()"
+  >
+    <mat-icon>add</mat-icon>
+    <span translate>SDK.ManageParticipants.AddParticipant</span>
+  </button>
 </div>
