--- a/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
@@ -1,22 +1,24 @@
 <header class="Header">
   <a [routerLink]="['/' + RouterResource.Welcome]">
-    <img class="logo"
-         alt="A-T Portal Logo"
-         src="/assets/images/atcp/original-logo-white.svg">
+    <img
+      class="logo"
+      alt="A-T Portal Logo"
+      src="/assets/images/atcp/original-logo-white.svg"
+    />
   </a>
   <nav>
     <ul>
       <li class="dropdown">
-        <a class="dropdown-toggle"
-           data-toggle="dropdown"
-           href="#"
-           translate>
-          <i class="fa fa-globe language-dropdown"></i>Common.Navigation.Language
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#" translate>
+          <i class="fa fa-globe language-dropdown"></i
+          >Common.Navigation.Language
           <i class="caret"></i>
         </a>
         <ul class="dropdown-menu dropdown-menu-right languages">
-          <li *ngFor="let language of languages; trackBy: trackByFn"
-              [attr.id]="language.code">
+          <li
+            *ngFor="let language of languages; trackBy: trackByFn"
+            [attr.id]="language.code"
+          >
             <a class="green-hover" (click)="changeLanguage(language)">
               {{ language.name }}
             </a>
@@ -24,78 +26,104 @@
         </ul>
       </li>
       <li class="dropdown">
-        <a class="Link dropdown-toggle"
-           data-toggle="dropdown"
-           href="#"
-           translate>
+        <a
+          class="Link dropdown-toggle"
+          data-toggle="dropdown"
+          href="#"
+          translate
+        >
           Common.Navigation.ForResearchers
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu dropdown-menu-right">
           <li>
-            <a [routerLink]="['/' + RouterResource.DataAccess]"
-               translate>
+            <a [routerLink]="['/' + RouterResource.DataAccess]" translate>
               Common.Navigation.DataAccessRequest
             </a>
           </li>
         </ul>
       </li>
       <li class="dropdown">
-        <a class="dropdown-toggle"
-           data-toggle="dropdown"
-           role="button"
-           aria-haspopup="true"
-           aria-expanded="false"
-           href="#"
-           translate>
+        <a
+          class="dropdown-toggle"
+          data-toggle="dropdown"
+          role="button"
+          aria-haspopup="true"
+          aria-expanded="false"
+          href="#"
+          translate
+        >
           Common.Navigation.LearnMore<span class="caret"></span>
         </a>
         <ul class="dropdown-menu dropdown-menu-right dropdown">
           <li>
-            <a id="about_us"
-               [routerLink]="['/' + RouterResource.AboutUs]"
-               translate>
+            <a
+              id="about_us"
+              [routerLink]="['/' + RouterResource.AboutUs]"
+              translate
+            >
               Common.Navigation.AboutUs
             </a>
           </li>
           <li class="divider"></li>
           <li>
-            <a id="about_initiative"
-               [routerLink]="['/' + RouterResource.AboutInitiative]"
-               translate>Common.Navigation.AboutThisInitiative</a>
+            <a
+              id="about_initiative"
+              [routerLink]="['/' + RouterResource.AboutInitiative]"
+              translate
+              >Common.Navigation.AboutThisInitiative</a
+            >
           </li>
           <li *ngIf="isAuthenticated">
-            <a id="statistics"
-               [routerLink]="['/' + RouterResource.Statistics]"
-               translate>Common.Navigation.Statistics</a>
+            <a
+              id="statistics"
+              [routerLink]="['/' + RouterResource.Statistics]"
+              translate
+              >Common.Navigation.Statistics</a
+            >
           </li>
         </ul>
       </li>
-      <li *ngIf="!isAuthenticated" >
-        <a class="ButtonBordered ButtonBordered--white"
-           id="join-us-nav"
-           [routerLink]="['/' + RouterResource.JoinUs]"
-           translate>
+      <li *ngIf="!isAuthenticated">
+        <a
+          class="ButtonBordered ButtonBordered--white"
+          id="join-us-nav"
+          [routerLink]="['/' + RouterResource.JoinUs]"
+          translate
+        >
           Common.Navigation.JoinUs
         </a>
       </li>
       <li class="dropdown" *ngIf="isAuthenticated">
-        <a class="dropdown-toggle"
-           data-toggle="dropdown"
-           role="button"
-           aria-haspopup="true"
-           aria-expanded="false"
-           href="#"
-           translate>
+        <a
+          class="dropdown-toggle"
+          data-toggle="dropdown"
+          role="button"
+          aria-haspopup="true"
+          aria-expanded="false"
+          href="#"
+          translate
+        >
           Common.Navigation.MyAccount<span class="caret"></span>
         </a>
         <ul class="dropdown-menu dropdown-menu-right dropdown">
           <li>
-            <a id="console"
-               [routerLink]="['/' + RouterResource.Console]"
-               translate>
-              Common.Navigation.YourParticipants
+            <a
+              *ngIf="!isMultiGoverned"
+              id="console"
+              [routerLink]="['/' + RouterResource.Console]"
+              translate
+            >
+              Common.Navigation.MyConsole
             </a>
+
+            <a
+              *ngIf="isMultiGoverned"
+              id="participant-list"
+              [routerLink]="RouterResource.ParticipantList"
+              translate
+              >Common.Navigation.YourParticipants</a
+            >
           </li>
         </ul>
       </li>
@@ -107,5 +135,6 @@
   <app-activity-progress-bar
     title="Common.Navigation.MedicalHistoryQuestionnaire"
     *ngIf="isProgressBarVisible"
-    automation-id="activity-progress-bar"></app-activity-progress-bar>
+    automation-id="activity-progress-bar"
+  ></app-activity-progress-bar>
 </header>
