Add dashboard component & refactoring

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
@@ -111,10 +111,10 @@
             <a
               *ngIf="!isMultiGoverned"
               id="console"
-              [routerLink]="['/' + RouterResource.Console]"
+              [routerLink]="['/' + RouterResource.Dashboard]"
               translate
             >
-              Common.Navigation.MyConsole
+              Common.Navigation.MyDashboard
             </a>
 
             <a
