--- a/ddp-workspace/projects/ddp-atcp/src/app/components/workflow-progress/workflow-progress.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/workflow-progress/workflow-progress.scss
@@ -50,6 +50,15 @@
         max-width: 21px;
       }
 
+      &.current {
+        color: $blue;
+        cursor: pointer;
+
+        &::after, &::before {
+          background-color: $blue;
+        }
+      }
+
       &.in-complete {
         @include c-green();
         color: $green;
