--- a/ddp-workspace/projects/ddp-atcp/src/app/components/welcome/welcome.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/welcome/welcome.html
@@ -18,7 +18,7 @@
           <a
             *ngIf="isAuthenticated"
             class="ButtonBordered ButtonBordered--white"
-            [routerLink]="[RouterResource.Console]"
+            [routerLink]="[RouterResource.Dashboard]"
             translate>
             Common.Navigation.YourParticipants
           </a>
@@ -42,7 +42,7 @@
     <a
       *ngIf="isAuthenticated"
       class="ButtonBordered ButtonBordered--green"
-      [routerLink]="[RouterResource.Console]"
+      [routerLink]="[RouterResource.Dashboard]"
       translate>
       Common.Navigation.YourParticipants
     </a>
@@ -109,7 +109,7 @@
     <a
       *ngIf="isAuthenticated"
       class="ButtonBordered ButtonBordered--green"
-      [routerLink]="[RouterResource.Console]"
+      [routerLink]="[RouterResource.Dashboard]"
       translate>
       Common.Navigation.YourParticipants
     </a>
