--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.scss
@@ -3,6 +3,10 @@
 
   font-family: 'Lato', sans-serif;
 
+  &--opaque {
+    background-color: #fafafa;
+  }
+
   &__row {
     &--disabled {
       opacity: 0.7;
