Add validation to phone control

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/data-access/data-access.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/data-access/data-access.html
@@ -41,7 +41,18 @@
         </div>
         <div class="form-group">
           <label for="phone" translate>DataAccess.ResearcherForm.Phone</label>
-          <input type="text" class="form-control" id="phone" [(ngModel)]="model.researcher_phone" [ngModelOptions]="{standalone: true}">
+          <input
+            type="text"
+            class="form-control"
+            id="phone"
+            pattern="[0-9\-\+\(\) ]+"
+            [(ngModel)]="model.researcher_phone"
+            [ngModelOptions]="{standalone: true}"
+            #phoneControl="ngModel"
+          />
+          <span class="error" *ngIf="form.submitted && phoneControl.errors && phoneControl.errors.pattern">
+            {{ 'DataAccess.Dataset.Messages.ResearcherPhone' | translate }}
+          </span>
         </div>
         <p><b>{{ ('DataAccess.ResearcherForm.Attachment') | translate }} *</b></p>
         <!-- TODO: add translation for buttonText and hintText-->
