DDP-5195: Support picklist nested options (#335)
* Implement nested options in picklist component.

Co-authored-by: Sampath K. Settipalli <sampath@broadinstitute.org>

--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -462,3 +462,15 @@ select:disabled {
         }
     }
 }
+
+// nested picklist
+.ddp-nested-picklist {
+    margin-left: 3rem;
+
+    &__title {
+        margin: 1rem 0 0.5rem 0;
+        font-family: 'Source Serif Pro', serif;
+        font-size: 1.2rem;
+        line-height: 2rem;
+    }
+}
