--- a/ddp-workspace/projects/ddp-brain/src/app/components/faq/faq.component.html
+++ b/ddp-workspace/projects/ddp-brain/src/app/components/faq/faq.component.html
@@ -45,7 +45,7 @@
             <h3 class="other-questions-block__title" translate>FaqPage.OtherQuestions.Title</h3>
             <p>
                 <span translate>FaqPage.OtherQuestions.Text1.Part1</span>
-                <a class="Link" href="project-info.pdf" target="_blank" translate>FaqPage.OtherQuestions.Text1.Part2</a>
+                <a class="Link" href="oner_pager.pdf" target="_blank" translate>FaqPage.OtherQuestions.Text1.Part2</a>
             </p>
             <p>
                 <span translate>FaqPage.OtherQuestions.Text2.Part1</span>
