Setting a max height on text area appears to fix sudden scroll problem (#339)

--- a/ddp-workspace/projects/ddp-brain/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain/src/styles/activities.scss
@@ -466,6 +466,10 @@ select:disabled {
     }
 }
 
+.ddp-textarea {
+    max-height: 10rem !important;
+}
+
 // nested picklist
 .ddp-nested-picklist {
     margin-left: 3rem;
