--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
@@ -4,11 +4,11 @@
             <h1 class="intro-block__title semi-bold center" translate>HomePage.IntroSection.Title</h1>
             <p class="intro-block__text" translate>HomePage.IntroSection.Text</p>
             <div *ngIf="!isAuthenticated" class="invitation" style="display:flex;justify-content:center;">
-                <div style="padding-left:2px; padding-right:2px;">
+                <div style="padding-left:2px;padding-right:20px;">
                   <a class="button button_basic" [routerLink]="'/' + appRoutes.Join"
                      translate style="white-space: nowrap;padding-left:10px; padding-right:10px;">HomePage.IntroSection.Code</a>
                 </div>
-                <a style="padding:0;" class="button button_simple button_underline" href="https://rally.partners.org/study/testboston"
+                <a style="padding:0px 20px 0px 0px;" class="button button_simple button_underline" href="https://rally.partners.org/study/testboston"
                    target="_blank"
                    translate>HomePage.IntroSection.NoCode</a>
             </div>
