--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
@@ -338,6 +338,10 @@ a[href^="mailto"]:active {
   background-color: $disabled-grey !important;
 }
 
+.mat-radio-label-content {
+  font-weight: normal;
+}
+
 app-activity-progress-bar .mat-progress-bar-fill::after {
   background-color: $bright-blue !important;
 }
