--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
@@ -30,12 +30,12 @@
 }
 
 .invitation {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
     margin: 1rem 0 0 0;
 
     .button:last-child {
         color: mat-color($app-theme, 1300) !important;
-        margin-left: 0.1rem;
     }
 }
 
