RGP: DDP-5223, initial setup: Added workflow start activity to tell us your story page and various refactoring

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/tell-us-your-story/tell-us-your-story.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/tell-us-your-story/tell-us-your-story.component.html
@@ -15,8 +15,6 @@
 
     <p class="Paragraph TopMargin25" [innerHTML]="'CountMeInPage.Text' | translate"></p>
 
-    <p class="Paragraph TopMargin25" style="text-align: center; font-weight: 800;">!Here should be activity start
-      workflow component!
-    </p>
+    <toolkit-workflow-start-activity-redesigned></toolkit-workflow-start-activity-redesigned>
   </div>
 </div>
