--- a/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
@@ -207,6 +207,12 @@
     }
 }
 
+.scrollable {
+    &:hover {
+        cursor: pointer !important;
+    }
+}
+
 @media only screen and (max-width: 620px) {
     .activity-steps {
         padding: 1rem 0;
