Fix translation keys, remove redundant and sort

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
@@ -27,7 +27,7 @@
     <ng-template #noParticipants>
       <ul class="participant-list">
         <li class="participant-list__item participant-list__item--placeholder">
-          {{ 'Components.ParticipantList.NoParticipants' | translate }}
+          {{ 'Toolkit.Dashboard.NoParticipants' | translate }}
         </li>
       </ul>
     </ng-template>
