--- a/ddp-workspace/projects/ddp-atcp/src/app/components/survey/survey.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/survey/survey.component.html
@@ -2,7 +2,7 @@
   <div class="page-padding">
     <h1 *ngIf="userFirstName">
       {{ userFirstName }}'s
-      <span translate>Components.Survey.Title</span>
+      <span translate>Survey.Title</span>
     </h1>
 
     <div class="workdir" [ngClass]="{ 'is-assent': isAssentActivity }">
