--- a/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/header/header.html
@@ -9,21 +9,7 @@
   <nav>
     <ul>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#" translate>
-          <i class="fa fa-globe language-dropdown"></i
-          >Common.Navigation.Language
-          <i class="caret"></i>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-right languages">
-          <li
-            *ngFor="let language of languages; trackBy: trackByFn"
-            [attr.id]="language.code"
-          >
-            <a class="green-hover" (click)="changeLanguage(language)">
-              {{ language.name }}
-            </a>
-          </li>
-        </ul>
+        <ddp-language-selector></ddp-language-selector>
       </li>
       <li class="dropdown">
         <a
@@ -128,7 +114,7 @@
         </ul>
       </li>
       <li>
-        <ddp-sign-in-out [signInCaption]="SignIn"></ddp-sign-in-out>
+        <ddp-sign-in-out [signInCaption]="'Common.Navigation.SignIn' | translate"></ddp-sign-in-out>
       </li>
     </ul>
   </nav>
