--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/buttons.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/buttons.scss
@@ -352,3 +352,57 @@
     width: 17%
   }
 }
+
+ddp-language-selector {
+  .SimpleButton {
+    display: flex;
+    align-items: center;
+
+    margin-bottom: -3px;
+  }
+
+  .ddp-globe {
+    width: 13px;
+    height: 14px;
+
+    margin-right: 5px;
+
+    stroke: currentColor;
+    fill: currentColor;
+  }
+
+  .ddp-dropdown-arrow {
+    width: 22px;
+    height: 18px;
+
+    font-size: 20px;
+  }
+}
+
+.language-menu {
+  width: 160px;
+
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 2px !important;
+  box-shadow: 0 1px 2px $silver-grey !important;
+
+  .mat-menu-content {
+    padding: 0 !important;
+
+    .mat-menu-item {
+      display: flex;
+      align-items: center;
+
+      height: auto;
+
+      padding: 10px 20px;
+
+      line-height: 20px;
+
+      &:hover {
+        background-color: $grey;
+        color: $green;
+      }
+    }
+  }
+}
