Fix spinner animation

--- a/ddp-workspace/projects/ddp-mpc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mpc/src/styles.scss
@@ -1411,6 +1411,16 @@ a:focus {
     animation: spin 2s linear infinite;
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .Sidenav li {
     text-align: start;
     padding: 0 !important;
