--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -62,6 +62,11 @@ p {
     font-weight: 400 !important;
 }
 
+// Right-to-left language styles
+html[dir='rtl'] {
+    //TODO
+}
+
 .StandardCaps {
   text-transform: none !important;
 }
