--- a/ddp-workspace/projects/ddp-atcp/src/app/components/statistics/statistics.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/statistics/statistics.scss
@@ -1,23 +1,7 @@
 @import '../../styles/variables';
-@import '../../styles/brushes';
 
 .statistics {
-  @media (min-width: 687px) {
-    width: 83.33333333%;
-  }
-  @media (min-width: 992px) {
-    width: 75%;
-  }
-  @media (min-width: 1200px) {
-    width: 66.66666667%;
-  }
-  @media (min-width: 1456px) {
-    width: 100%;
-  }
-
-  .pre-line {
-    white-space: pre-line;
-  }
+  max-width: 1200px;
 
   h1 {
     font-size: 26px;
@@ -26,61 +10,72 @@
     display: block;
     color: $neutral-gray;
   }
+}
 
-  h2 {
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 22px;
-    padding-bottom: 5px;
-    margin-top: 10px;
-    margin-bottom: 50px;
+.statistics-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin: 5rem 0;
+  padding: 0;
+
+  list-style: none;
+
+  @media only screen and (max-width: 576px) {
+    margin: 2rem 0;
   }
 
-  ul.counters {
-    list-style: none;
-    padding: 0;
-    margin-top: 25px;
+  &__item {
+    width: calc(100% / 4);
 
-    li {
-      color: $neutral-gray;
-      font-size: 14px;
-      vertical-align: top;
-      @media (min-width: 502px) {
-        width: 210px;
-        display: inline-block;
-      }
+    margin-bottom: 3rem;
+    padding-right: 40px;
 
-      div {
-        @include c-green();
-        font-size: 55px;
-        font-weight: 700;
-        height: 70px;
-      }
+    @media only screen and (max-width: 1024px) {
+      width: calc(100% / 2);
+    }
+
+    @media only screen and (max-width: 576px) {
+      width: 100%;
+
+      margin-bottom: 0;
+      padding-right: 0;
+
+      text-align: center;
     }
   }
+}
 
-  > p {
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 22px;
-    padding-bottom: 5px;
-    margin: 56px 0 0 0;
+.statistic {
+  &__count {
+    font-size: 60px;
+    line-height: 1.2;
+    color: $green;
   }
 
-  hr.hor-bar {
-    border: 4px $mariner-blue solid;
-    margin-top: 5px;
-    margin-bottom: 0;
-    margin-right: 15px;
-    float: left;
+  &__description {
+    margin: 0;
+
+    color: $neutral-gray;
   }
+}
 
-  ul.countries {
-    margin: 10px 0;
-    color: $dove-grey;
+.countries-distribution {
+  margin: 0 0 2rem 0;
+  padding: 0;
 
-    p {
-      font-size: 16px;
-    }
+  list-style: none;
+}
+
+.distribution {
+  display: flex;
+  align-items: center;
+
+  &__bar {
+    height: 10px;
+
+    margin-right: 1rem;
+
+    background-color: $blue;
   }
 }
