--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -704,17 +704,27 @@ input.mat-input-element.study-listing-filter {
     width: 100%;
 }
 
+html[dir='rtl'] {
+    /* TODO: Hebrew adjustments */
+}
+
 .navbar-nav {
     float: right !important;
     width: 660px;
+}
+
+html[lang='es'] .navbar-nav {
+    width: 800px;
 }
 
 @media only screen and (min-width: 1027px) and (max-width: 1200px) {
     .Header-background {
         padding: 30px 40px 20px 80px !important;
     }
+    html[lang="es"] .navbar-nav {
+        width: 486px;
+    }
     .navbar-nav {
-        float: right !important;
         width: 660px;
     }
 }
@@ -723,8 +733,10 @@ input.mat-input-element.study-listing-filter {
     .Header-background {
         padding: 30px 40px 20px 80px !important;
     }
+    html[lang="es"] .navbar-nav {
+        width: 486px;
+    }
     .navbar-nav {
-        float: right !important;
         width: 584px;
     }
 }
@@ -736,11 +748,42 @@ input.mat-input-element.study-listing-filter {
     .navbar-header {
         padding: 0 10px 25px 25px !important;
     }
+    html[dir="rtl"] .navbar-header {
+        padding: 0 25px 25px 10px !important;
+    }
     .navbar-collapse {
         padding: 0 25px 10px 25px !important;
     }
+    html[lang="es"] .navbar-nav {
+        width: 430px !important;
+    }
+    html[lang='zh'] .navbar-nav {
+        width: 340px !important;
+    }
     .navbar-nav {
         width: 415px !important;
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+    html[dir='rtl'] .navbar-header {
+        float: right !important;
+        padding: 0 25px 25px 20px !important;
+    }
+
+    html[dir='rtl'] .navbar-nav {
+        float: left !important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    html[dir='rtl'] .Header-logo {
+        float: right !important;
+    }
+
+    html[dir='rtl'] .Header-hamburger {
+        float: left !important;
     }
 }
 
