--- a/ddp-workspace/projects/ddp-mpc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mpc/src/styles.scss
@@ -886,7 +886,7 @@ a:focus {
     font-weight: 300;
     transition: all 0.3s ease-out;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
-    background-color: mat-color($app-theme, 2200) !important;
+    background-color: mat-color($app-theme, 2200);
     cursor: pointer;
 }
 
