ATX-288: Add popup after submitting feeding survey

--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
@@ -239,6 +239,21 @@ blockquote {
   }
 }
 
+.thank-you-popup {
+  .popup-message-text {
+    margin: 0;
+  }
+
+  .popup-message {
+    position: relative;
+
+    .mat-icon {
+      right: 0 !important;
+      top: 0 !important;
+    }
+  }
+}
+
 .c-black {
   @include c-black();
 }
