rarex | add custom dashboard

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity-page/rarex-activity-page.component.html
@@ -15,6 +15,7 @@
       *ngIf="isActivityShown && !isFetchingActivities"
       [studyGuid]="studyGuid"
       [activityGuid]="instanceGuid"
+      [isReadonly]="isReadonly"
       (submit)="onSubmit($event)"
     ></app-rarex-activity>
   </div>
