--- a/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity/rarex-activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/rarex-activity/rarex-activity.component.html
@@ -16,7 +16,7 @@
         <ng-container *ngIf="model && model.introduction">
           <ddp-activity-section
             [section]="model.introduction"
-            [readonly]="model.readonly || dataEntryDisabled"
+            [readonly]="model.readonly || dataEntryDisabled || isReadonly"
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
@@ -49,7 +49,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <ddp-activity-section
             [section]="currentSection"
-            [readonly]="model.readonly || dataEntryDisabled"
+            [readonly]="model.readonly || dataEntryDisabled || isReadonly"
             [validationRequested]="validationRequested"
             [studyGuid]="studyGuid"
             [activityGuid]="activityGuid"
@@ -66,7 +66,7 @@
           <ng-container *ngIf="model.closing">
             <ddp-activity-section
               [section]="model.closing"
-              [readonly]="model.readonly || dataEntryDisabled"
+              [readonly]="model.readonly || dataEntryDisabled || isReadonly"
               [validationRequested]="validationRequested"
               [studyGuid]="studyGuid"
               [activityGuid]="activityGuid"
@@ -88,7 +88,7 @@
             <div *ngIf="isStepped && !isFirstStep" class="activity__btn-section__left">
               <button
                 class="button button_medium button_primary"
-                [disabled]="(isPageBusy | async) || dataEntryDisabled"
+                [disabled]="(isPageBusy | async)"
                 (click)="decrementStep()"
                 [innerHTML]="'SDK.PreviousButton' | translate"
               ></button>
@@ -98,21 +98,21 @@
               <button
                 *ngIf="!isLastStep"
                 class="button button_medium button_primary"
-                [disabled]="(isPageBusy | async) || dataEntryDisabled"
+                [disabled]="(isPageBusy | async)"
                 (click)="incrementStep()"
                 [innerHTML]="(isPageBusy | async) ? ('SDK.SavingButton' | translate) : ('SDK.NextButton' | translate)"
               ></button>
 
               <ng-container *ngIf="isLastStep">
                 <button
-                  *ngIf="model.readonly"
+                  *ngIf="isReadonly"
                   class="button button_medium button_primary"
                   (click)="close()"
                   [innerHTML]="'SDK.CloseButton' | translate"
                 ></button>
 
                 <button
-                  *ngIf="!model.readonly"
+                  *ngIf="!model.readonly && !isReadonly"
                   class="button button_medium button_primary"
                   #submitButton
                   [disabled]="(isPageBusy | async) || dataEntryDisabled"
