--- a/ddp-workspace/projects/ddp-rarex/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles.scss
@@ -9,5 +9,6 @@
 @import './styles/buttons.scss';
 @import './styles/activity.scss';
 @import './styles/dashboard.scss';
+@import './styles/table.scss';
 
 @include mat-core($app-typography);
